--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,3 +1,4 @@
 @charset "utf-8";
 
 $base-font-family: Roboto, sans-serif;
+$code-font-family: 'Jetbrains Mono', 'Roboto Mono', 'Consolas', monospace;
